変更の保存

--- a/style.css
+++ b/style.css
@@ -6,12 +6,23 @@ canvas {
   color: aqua;
 }
 
-#volume {
+.volume-on {
   height: 50px;
   width: 50px;
   border-style: none;
   background-color: #FFFFFF;
   background-image: url('sound_on.png');
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.volume-off {
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  background-color: #FFFFFF;
+  background-image: url('sound_off.png');
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
